added static output from gulp for now. refactored errorhandlercontroller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.contextPath=/
-spring.datasource.url = jdbc:mysql://localhost:3306/chat
-spring.datasource.username = root
-spring.datasource.password = pass
+spring.datasource.url = jdbc:mysql://localhost:3306/dbchat01
+spring.datasource.username = chat01
+spring.datasource.password = chat01
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 spring.jpa.show-sql = false
