prepared location for alternative GUI

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.validationQuery = SELECT 1
 spring.jpa.show-sql = false
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.DefaultNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=TRACE
+
+application.security.config.url-matchers=/index.html, /simple/**,/angular/**
